fix spacing between self view and remote mute buttons

--- a/VideoWeb/VideoWeb/ClientApp/src/app/waiting-space/participant-waiting-room/participant-waiting-room.component.scss
+++ b/VideoWeb/VideoWeb/ClientApp/src/app/waiting-space/participant-waiting-room/participant-waiting-room.component.scss
@@ -125,3 +125,7 @@
   background-color: govuk-colour('red');
   color: govuk-colour('white');
 }
+
+.remote-container {
+  margin-left: -1vw;
+}
